k8s/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: inv
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inv
      tier: frontend
  template:
    metadata:
      labels:
        app: inv
        tier: frontend
    spec:
      containers:
        - name: inv-frontend
          # image: ghcr.io/crateme-ul/inv-backend/nginx:inv-114-pipeline-cd-ec2
          image: inv-frontend:local
          # env:
          #   - name: VITE_API_ENDPOINT
          #     value: http://inv-server.default.svc.cluster.local
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "1024Mi"
              cpu: "2"
      # imagePullSecrets:
      #   - name: ghcr-secret
