k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inv-server
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: inv
    tier: backend
