k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inv-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: inv
    tier: db
