k8s/proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: inv
    tier: db
