k8s/inv-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/
            backend:
              service:
                name: inv-backend
                port:
                  number: 3000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: inv-frontend
                port:
                  number: 80
